Revert artifactId to codeHash for ContractState
