# api/src/main/scala/org/alephium/api/model/package.scala
@@ -1,29 +1,0 @@
-// Copyright 2018 The Alephium Authors
-// This file is part of the alephium project.
-//
-// The library is free software: you can redistribute it and/or modify
-// it under the terms of the GNU Lesser General Public License as published by
-// the Free Software Foundation, either version 3 of the License, or
-// (at your option) any later version.
-//
-// The library is distributed in the hope that it will be useful,
-// but WITHOUT ANY WARRANTY; without even the implied warranty of
-// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-// GNU Lesser General Public License for more details.
-//
-// You should have received a copy of the GNU Lesser General Public License
-// along with the library. If not, see <http://www.gnu.org/licenses/>.
-
-package org.alephium.api
-
-import org.alephium.protocol.Hash
-
-package object model {
-  /*
-   * As the introduce of template variables to contract&script, each
-   * contract source file can be used to populate different contract
-   * bytecode for deployment and testing. Therefore, a unique id for
-   * the original source file is helpful for SDK.
-   */
-  type ArtifactId = Hash
-}
